fixed spacing issue in footer

--- a/public/assets/site/css/style2.css
+++ b/public/assets/site/css/style2.css
@@ -687,7 +687,6 @@ div.growlUI .message {
 
 .footer {
   font-size: 9px;
-  margin: 0 -15px 10px -15px;
   color: rgb(59,59,61);
 }
 .nav-footer ul {
